syntax = "proto3";

package staticpagepb;

option go_package = "metadatasvc/gen/go/staticpagepb;staticpagepb";

import "commonpb/seo.proto";
import "google/protobuf/field_mask.proto";
import "buf/validate/validate.proto";

// ========================
// ENTITY
// ========================

message StaticPage {
    uint64 id = 1;
    string title = 2;
    string slug = 3;
    string content = 4;
    int32 pageType = 5;
    int32 sortOrder = 6;
    commonpb.SEO seo = 7;
    int32 adsPlatform = 8;
    int32 status = 9;

    uint64 createdBy = 10;
    uint64 updatedBy = 11;
    int64 createdAt = 12;
    int64 updatedAt = 13;

    int32 deletedVersion = 14;
}

// ========================
// CREATE https://protovalidate.com
// ========================

message CreateRequest {
    string title = 1 [(buf.validate.field).string.min_len = 1];
    string slug = 2;
    string content = 3;
    int32 pageType = 4;
    int32 sortOrder = 5;
    commonpb.SEO seo = 6;
    int32 adsPlatform = 7;
    int32 status = 8;
    uint64 createdBy = 9;
}

message CreateResponse {
    uint64 id = 1;
}

// ========================
// UPDATE (with field mask)
// ========================

message UpdateRequest {
    uint64 id = 1;

    string title = 2;
    string slug = 3;
    string content = 4;
    int32 pageType = 5;
    int32 sortOrder = 6;
    commonpb.SEO seo = 7;
    int32 adsPlatform = 8;
    int32 status = 9;

    uint64 updatedBy = 10;

    // standard Google field mask ("title", "slug", "seo", ...)
    google.protobuf.FieldMask updateMask = 11;
}

message UpdateResponse {
    uint64 id = 1;
}

// ========================
// DELETE (batch)
// ========================

message DeleteRequest {
    repeated uint64 ids = 1;
    uint64 deletedBy = 2;
}

message DeleteResponse {
    repeated uint64 ids = 1;
}

// ========================
// LIST
// ========================

message ListRequest {
    // filters
    repeated uint64 ids = 1;
    string title = 2;
    string slug = 3;
    repeated int32 pageTypes = 4;
    repeated int32 adsPlatforms = 5;
    repeated int32 statuses = 6;
    int32 deletedVersion = 7;

    // sql select override
    string select = 8;

    // sorting: "created_at desc", "sortOrder asc", etc.
    string sort = 9;

    // pagination
    uint32 limit = 10;
    uint32 offset = 11;
    bool includeTotal = 12;
}

message ListResponse {
    repeated StaticPage pages = 1;
    uint64 total = 2;
}

// ========================
// DETAIL (single)
// ========================

message GetRequest {
    uint64 id = 1;
    string slug = 2;

    // optionally override columns
    string select = 3;
}

message GetResponse {
    StaticPage page = 1;
}
